[package]
edition = "2021"
name    = "itm"
version = "0.1.0"

[features]
default = []
address_sanitizer = []

[dependencies]
cxx = "1"
thiserror = "1"

[build-dependencies]
cxx-build = "1"

[dev-dependencies]
anyhow  = "1"
clap    = { version = "4.4.2", features = ["derive"] }
geo     = "0.26.0"
terrain = { git = "https://github.com/JayKickliter/geoprop.git", branch = "main" }

[[example]]
name = "p2p"
